fix: z-index issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,9 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+#map {
+  z-index: 0; 
+}
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -116,6 +119,7 @@ nav h1 a {
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
